# tempProbe

./: .gitignore  README.md  develop.sh  package.sh  pyproject.toml
hardware/examples/WebServer.ino/: web_server.ino
hardware/examples/bluetooth/: bluetooth.ino
hardware/temp_box/WebServer/: WebServer.ino
media/icons/: icon.icns
temp_box/: platformio.ini
temp_box/exclude/: main_old.cpp
temp_box/include/: lcd.h  oled.h  secrets.example.h  temp_probe.h  text_alerts.h  web_server.h  wifi_util.h
temp_box/src/: lcd.cpp  main.cpp  oled.cpp  temp_probe.cpp  text_alerts.cpp  web_server.cpp  wifi_util.cpp
temp_monitor/: data.py  globals.py  main.py
temp_monitor/containers/: monitor.py  settings.py
temp_monitor/pages/: settings.py
