[tool.poetry]
name = "temp-monitor"
version = "0.1.0"
description = ""
authors = ["Brandon Egger <brandonegger64@gmail.com>"]
readme = "README.md"
packages = [{include = "temp_monitor"}]

[tool.poetry.dependencies]
python = "^3.11"
flet = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
