[tool.poetry]
name = "temp-monitor"
version = "0.1.0"
description = ""
authors = ["Brandon Egger <brandonegger64@gmail.com>"]
readme = "README.md"
packages = [{include = "temp_monitor"}]

[tool.poetry.dependencies]
python = "3.11.1"
flet = "^0.3.2"
pyinstaller = "^5.7.0"
plotly = "^5.13.0"
pandas = "^1.5.3"
kaleido = "0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
